# ChangeLog for gnome-extra/gnome2-user-docs
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome2-user-docs/ChangeLog,v 1.80 2007/07/05 16:10:06 uberlord Exp $

  05 Jul 2007; Roy Marples <uberlord@gentoo.org>
  gnome2-user-docs-2.16.1.ebuild:
  Keyworded ~x86-fbsd.

  21 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  gnome2-user-docs-2.16.1.ebuild:
  Stable on IA64, bug 156662.

  19 Jan 2007; Jeroen Roovers <jer@gentoo.org>
  gnome2-user-docs-2.16.1.ebuild:
  Stable for HPPA (bug #147751).

  14 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  gnome2-user-docs-2.16.1.ebuild:
  Stable on Alpha.

  21 Dec 2006; Markus Rothe <corsair@gentoo.org>
  gnome2-user-docs-2.16.1.ebuild:
  Stable on ppc64; bug #156662

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome2-user-docs-2.16.1.ebuild:
  Stable on sparc

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gnome2-user-docs-2.16.1.ebuild:
  Stable on ppc wrt bug #156662.

  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  gnome2-user-docs-2.16.1.ebuild:
  Stable on amd64 wrt bug #156662.

  10 Dec 2006; Andrej Kacian <ticho@gentoo.org>
  gnome2-user-docs-2.16.1.ebuild:
  Stable on x86, bug #156662.

  19 Nov 2006; Mart Raudsepp <leio@gentoo.org>
  -gnome2-user-docs-2.8.1.ebuild, -gnome2-user-docs-2.14.0.ebuild:
  Remove old versions

  29 Oct 2006; John N. Laliberte <allanonjl@gentoo.org>
  gnome2-user-docs-2.14.2.ebuild, -gnome2-user-docs-2.16.0.ebuild,
  gnome2-user-docs-2.16.1.ebuild:
  add dep on pkgconfig, fixes #151979

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org>
  gnome2-user-docs-2.14.2.ebuild:
  Mark 2.14.2 stable on alpha

*gnome2-user-docs-2.16.1 (13 Oct 2006)

  13 Oct 2006; Mart Raudsepp <leio@gentoo.org>
  +gnome2-user-docs-2.16.1.ebuild:
  Version bump

  13 Sep 2006; Aron Griffis <agriffis@gentoo.org>
  gnome2-user-docs-2.14.2.ebuild:
  Mark 2.14.2 stable on ia64. #139612
