@@ -1,5 +1,9 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gnome-user-docs-2.14.2.tar.bz2 2024845 RMD160 da29639dad367141bed01bd05e823c0db99fcd12 SHA1 39ddfd892668e3cb644ea5211b83602b665eb352 SHA256 e055b6a7cb4c3c9e3a27c27c0c8d09f74de81918b3b036dbbcb7a754cb6fb790
 DIST gnome-user-docs-2.16.1.tar.bz2 4005619 RMD160 277af356c82aa4404b99562a917e9fea473ee210 SHA1 aa8a43342c2ae849b10680d8a5bc3afd0854640c SHA256 2ad18c2902969c81e0a8d5c510f27d6187ed83a748e8cabe33124c7f0862b354
+DIST gnome-user-docs-2.18.2.tar.bz2 6520221 RMD160 94196bf4753054ed5d58a50f31be7d013aecd912 SHA1 077fdaf2f24e739ebc9504436168dcbf15df3407 SHA256 930c67d304fdb4ad9042430bfac59998011b8be02183733b93f1a08dcb5a7400
 EBUILD gnome2-user-docs-2.14.2.ebuild 832 RMD160 69e91d0ff8f768d85317c852c785ab056098dcc2 SHA1 46fc2771f267b9f77f476f329313e26ae56dbccb SHA256 5d2eda055ca92c1f7c1101ba20eed491aaae4e53cb25e779769ec2f7979fe9b7
 MD5 303453cdb8577f6e089da3649a3a9da7 gnome2-user-docs-2.14.2.ebuild 832
 RMD160 69e91d0ff8f768d85317c852c785ab056098dcc2 gnome2-user-docs-2.14.2.ebuild 832
@@ -8,10 +12,14 @@ EBUILD gnome2-user-docs-2.16.1.ebuild 842 RMD160 ffa330cb47ab17edd661ad27562f667
 MD5 57103a549095dd442b7fc40b2b0ed47b gnome2-user-docs-2.16.1.ebuild 842
 RMD160 ffa330cb47ab17edd661ad27562f66748ce5510a gnome2-user-docs-2.16.1.ebuild 842
 SHA256 b951abb53366fe3fa56f64691df46404962358c3d3ea44139b26b3dff0bc4500 gnome2-user-docs-2.16.1.ebuild 842
-MISC ChangeLog 9657 RMD160 4c2d0620d170a527f7d3ffad478ffe0912b29506 SHA1 a9edf8bf8105f15b8f7317cc584b9d622f1fe840 SHA256 5baeb48ce19c9704047c128c504f345885f991e5a7d3cc54f9cfb76adb9fad94
-MD5 0b26312a3c3e45231855388e5a46b04e ChangeLog 9657
-RMD160 4c2d0620d170a527f7d3ffad478ffe0912b29506 ChangeLog 9657
-SHA256 5baeb48ce19c9704047c128c504f345885f991e5a7d3cc54f9cfb76adb9fad94 ChangeLog 9657
+EBUILD gnome2-user-docs-2.18.2.ebuild 846 RMD160 72a97a5880ae51aeedaa57dfabc1de7cfe1a6a6d SHA1 cccc57dfe46be044c8fd321ec45e9b23fbd1838e SHA256 454075c46e25fb6123a15f2c9e19a1629668a8ca8e39c64ce3f26453d77962d8
+MD5 f25b2a25cd03b1d4f8215256f3a4960a gnome2-user-docs-2.18.2.ebuild 846
+RMD160 72a97a5880ae51aeedaa57dfabc1de7cfe1a6a6d gnome2-user-docs-2.18.2.ebuild 846
+SHA256 454075c46e25fb6123a15f2c9e19a1629668a8ca8e39c64ce3f26453d77962d8 gnome2-user-docs-2.18.2.ebuild 846
+MISC ChangeLog 9803 RMD160 374c3685d730fded8bc87ebbdaab2329ef2d7f43 SHA1 0ce2948994bc3ef22176f03bcb51b3fe688be6b4 SHA256 8bb852e396859a69483f6297734654c3ed0740f3b9cedbc417a150624f286fd4
+MD5 79bbc5fd40cdf37c33039f96857b8505 ChangeLog 9803
+RMD160 374c3685d730fded8bc87ebbdaab2329ef2d7f43 ChangeLog 9803
+SHA256 8bb852e396859a69483f6297734654c3ed0740f3b9cedbc417a150624f286fd4 ChangeLog 9803
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e metadata.xml 158
@@ -22,3 +30,13 @@ SHA256 d8ee3d458bb79181b773d568eafb0407b99dc188d9366198da291b867c9e8ad9 files/di
 MD5 dae570e5e895e1b40bf12a616167f67c files/digest-gnome2-user-docs-2.16.1 274
 RMD160 90b86d3b78efe9441e00f6d3e98c00174fdd3e72 files/digest-gnome2-user-docs-2.16.1 274
 SHA256 a9366b2beb7ecc33f20ce7afb340eb7cdf979b5b7569f9be07b8d2555ea56b26 files/digest-gnome2-user-docs-2.16.1 274
+MD5 03c1329408c7def872ee1b13b20dfc0e files/digest-gnome2-user-docs-2.18.2 274
+RMD160 f11bf9831b84060027c719af87b608ed6714feab files/digest-gnome2-user-docs-2.18.2 274
+SHA256 e3ecbb2bb7dfe01866800d731e7ac8f1192f737987ade12f0b6805f314579b53 files/digest-gnome2-user-docs-2.18.2 274
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.5 (GNU/Linux)
+
+iD8DBQFGqZDokeYb6olFHJcRAvBQAKClmlWEAWe4T7E4SKZhDUtiK2zluACfXodI
+7gWTx+uXeA821PPsCdgFIhs=
+=8SIH
+-----END PGP SIGNATURE-----
