@@ -1,0 +1,3 @@
+MD5 4d3b5c8bd3cc8008f2a44d98efaa2502 gnome-user-docs-2.18.2.tar.bz2 6520221
+RMD160 94196bf4753054ed5d58a50f31be7d013aecd912 gnome-user-docs-2.18.2.tar.bz2 6520221
+SHA256 930c67d304fdb4ad9042430bfac59998011b8be02183733b93f1a08dcb5a7400 gnome-user-docs-2.18.2.tar.bz2 6520221
